--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
         // Wait for the Supabase library to load
         document.addEventListener('DOMContentLoaded', async () => {
@@ -346,7 +346,7 @@
             const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1uYnRkd2tzcndoYm95ZnJreHFmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgyMjAzNDAsImV4cCI6MjA2Mzc5NjM0MH0.kdKVhO7N3ecPgu4nOakQ98J2hMHi1lGgP9rcII4DCH8';
             
             // Initialize Supabase client
-            const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+            const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
             
             let games = [];
             let filteredGames = [];
