--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <div class="form-group">
                         <label for="status">Status</label>
                         <select id="status" required>
+                            <option value="owned">Owned</option>
                             <option value="wishlist">Wishlist</option>
-                            <option value="backlog">Backlog</option>
                             <option value="playing">Currently Playing</option>
                             <option value="completed">Completed</option>
                         </select>
@@ -93,8 +93,8 @@
             <label for="filterStatus">Filter by Status:</label>
             <select id="filterStatus">
                 <option value="">All Status</option>
+                <option value="owned">Owned</option>
                 <option value="wishlist">Wishlist</option>
-                <option value="backlog">Backlog</option>
                 <option value="playing">Currently Playing</option>
                 <option value="completed">Completed</option>
             </select>
