added in cover art

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/igdb-api-node@1.0.1/dist/igdb-api-node.min.js"></script>
+    <script src="js/igdb.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
