--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div>Currently Playing</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number" id="backlogCount">0</div>
-                <div>Backlog</div>
+                <div class="stat-number" id="ownedCount">0</div>
+                <div>Owned</div>
             </div>
         </div>
 
